tweaking discography.html and styles.csss

--- a/discography/discography.html
+++ b/discography/discography.html
@@ -17,24 +17,12 @@
     <main>
         <section id="music-section">
             <h2>Top Tracks</h2>
-            <div class="card-container">
-                <div class="card">
-                    <img src="placeholder-music.jpg" alt="Album cover">
-                    <h3>Track Title</h3>
-                    <p>Artist Name</p>
-                    <button>Play</button>
-                </div>
+            <div class="card-container" id="music-cards">
             </div>
         </section>
         <section id="movie-section">
             <h2>Popular Movies</h2>
-            <div class="card-container">
-                <div class="card">
-                    <img src="placeholder-movie.jpg" alt="Movie Poster">
-                    <h3>Movie Title</h3>
-                    <p>Release Year</p>
-                    <button>More Info Here</button>
-                </div>
+            <div class="card-container" id="movie-cards">
             </div>
         </section>
     </main>
