--- a/discography/discography.html
+++ b/discography/discography.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Music & Movie Highlights</title>
 </head>
 <body id ="media-page">
@@ -18,17 +19,49 @@
         <section id="music-section">
             <h2>Top Tracks</h2>
             <div class="card-container" id="music-cards">
+                <div class="card">
+                    <img src="https://dummyimage.com/150x150/000/fff&text=Album+Cover" alt="Album Cover">
+                    <h3>Track Title</h3>
+                    <p>Artist Name</p>
+                </div>
+                <div class="card">
+                    <img src="https://dummyimage.com/150x150/000/fff&text=Album+Cover" alt="Album Cover">
+                    <h3>Track Title</h3>
+                    <p>Artist Name</p>
+                </div>
+                <div class="card">
+                    <img src="https://dummyimage.com/150x150/000/fff&text=Album+Cover" alt="Album Cover">
+                    <h3>Track Title</h3>
+                    <p>Artist Name</p>
+                </div>
             </div>
         </section>
+
         <section id="movie-section">
             <h2>Popular Movies</h2>
             <div class="card-container" id="movie-cards">
+                <div class="card">
+                    <img src="https://dummyimage.com/150x225/000/fff&text=Movie+Poster" alt="Movie Poster">
+                    <h3>Movie Title</h3>
+                    <p>Release Year</p>
+                </div>
+                <div class="card">
+                    <img src="https://dummyimage.com/150x225/000/fff&text=Movie+Poster" alt="Movie Poster">
+                    <h3>Movie Title</h3>
+                    <p>Release Year</p>
+                </div>
+                <div class="card">
+                    <img src="https://dummyimage.com/150x225/000/fff&text=Movie+Poster" alt="Movie Poster">
+                    <h3>Movie Title</h3>
+                    <p>Release Year</p>
+                </div>
             </div>
         </section>
     </main>
     <footer>
         <button id="surprise-btn">Surprise me!</button>
-        <p><i>Music data provided by Spotify.</i></p>
+        <p><i>This product uses the TMDb API but is not endorsed or certified by TMDb. Movie data and images © The Movie Database (TMDb).</i></p>
+        <p><i>Music recommendations and data provided by Reccobeats API.</i></p>
     </footer>
     <script src="media.js"></script>
 </body>
