--- a/discography/discography.html
+++ b/discography/discography.html
@@ -63,6 +63,6 @@
         <p><i>This product uses the TMDb API but is not endorsed or certified by TMDb. Movie data and images © The Movie Database (TMDb).</i></p>
         <p><i>Music recommendations and data provided by Reccobeats API.</i></p>
     </footer>
-    <script src="media.js"></script>
+    <script src="discography.js"></script>
 </body>
 </html>
