Added more changes to files

--- a/details.html
+++ b/details.html
@@ -61,6 +61,27 @@
       color: #888;
     }
 
+    .song-detail-layout {
+      display: flex;
+      gap: 1.5rem;
+      align-items: flex-start;
+      flex-wrap: wrap;
+    }
+
+    .song-detail-layout img {
+      max-width: 250px;
+      height: auto;
+      border-radius: 8px;
+    }
+
+
+    #details-container > div {
+      display: flex;
+      gap: 1rem;
+      align-items: flex-start; /* aligns text to the top of the image */
+      flex-wrap: wrap;
+    }
+
     #details-container img {
       max-width: 100%;
       border-radius: 8px;
