--- a/decoy.html
+++ b/decoy.html
@@ -2,103 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Catalog: Media Archive - Explore</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Press+Start+2P&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet" />
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #111;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-
-    header {
-      background-color: #222;
-      padding: 1rem;
-      text-align: center;
-    }
-
-    h1 {
-      margin: 0;
-      font-size: 2.5rem;
-      text-transform: uppercase;
-      cursor: pointer;
-    }
-
-    main {
-      flex: 1;
-      padding: 2rem;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 2rem;
-    }
-
-    section {
-      background-color: #1c1c1c;
-      padding: 1rem;
-      border-radius: 8px;
-    }
-
-    h2 {
-      margin-top: 0;
-      font-size: 1.6rem;
-    }
-
-    .item {
-      margin-bottom: 1rem;
-    }
-
-    .item-title {
-      font-weight: bold;
-      font-size: 1.1rem;
-    }
-
-    .item-sub {
-      font-size: 0.9rem;
-      color: #bbb;
-    }
-
-    footer {
-      background-color: #222;
-      padding: 1rem;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #888;
-    }
-
-    iframe {
-      border-radius: 8px;
-    }
-  </style>
 </head>
-<body>
+<body id="media-page">
 
   <header>
     <h1><a href="index.html" style="text-decoration: none; color: inherit;">Catalog: Media Archive</a></h1>
-    <h2 id="decade-header">Explore the Decade</h2>
+    <h2 id="decade-name">Explore the Decade</h2>
   </header>
 
   <main>
-    <section>
-      <h2>Top Songs</h2>
-      <div id="music-list">Loading music...</div>
+    <section id="music-section">
+      <h2>Top Albums</h2>
+      <div class="card-container" id="music-cards">
+        <!-- Music cards will be injected here by JS -->
+      </div>
     </section>
 
-    <section>
-      <h2>Top Films</h2>
-      <div id="film-list">Loading films...</div>
+    <section id="movie-section">
+      <h2>Popular Movies</h2>
+      <div class="card-container" id="movie-cards">
+        <!-- Movie cards will be injected here by JS -->
+      </div>
     </section>
   </main>
 
   <footer>
-    © 2025 CATALOG: MEDIA ARCHIVE, ALL RIGHTS RESERVED
+    <br>
+    <i>This product uses the TMDb API but is not endorsed or certified by TMDb. Movie data and images © The Movie Database (TMDb).</i>
   </footer>
 
   <script src="decoy.js"></script>
