--- a/details.html
+++ b/details.html
@@ -120,7 +120,7 @@
   </main>
 
   <footer>
-    © 2025 CATALOG: MEDIA ARCHIVE, ALL RIGHTS RESERVED
+    <i>This product uses the TMDb API but is not endorsed or certified by TMDb. Movie data and images © The Movie Database (TMDb).</i>
   </footer>
 
   <script src="details.js"></script>
