--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </main>
 
   <footer>
-    © 2025 CATALOG: MEDIA ARCHIVE, ALL RIGHTS RESERVED
+    <i>This product uses the TMDb API but is not endorsed or certified by TMDb. Movie data and images © The Movie Database (TMDb).</i>
   </footer>
 
   <script src="index.js"></script>
