Edit to footer with correct attributions

--- a/decoy.html
+++ b/decoy.html
@@ -33,7 +33,7 @@
 
   <footer>
     <br>
-    <i>This product uses the TMDb API but is not endorsed or certified by TMDb. Movie data and images © The Movie Database (TMDb).</i>
+    <i>This product uses the TMDb API and Last.fm API but is not endorsed or certified by TMDb or Last.fm. <br>Movie data and images © The Movie Database (TMDb). Album data and images © Last.fm.</i>
   </footer>
 
   <script src="decoy.js"></script>
