--- a/details.html
+++ b/details.html
@@ -120,7 +120,7 @@
   </main>
 
   <footer>
-    <i>This product uses the TMDb API but is not endorsed or certified by TMDb. Movie data and images © The Movie Database (TMDb).</i>
+    <i>This product uses the TMDb API and Last.fm API but is not endorsed or certified by TMDb or Last.fm. <br>Movie data and images © The Movie Database (TMDb). Album data and images © Last.fm.</i>
   </footer>
 
   <script src="details.js"></script>
