Final small edits

--- a/details.html
+++ b/details.html
@@ -78,7 +78,7 @@
     #details-container > div {
       display: flex;
       gap: 1rem;
-      align-items: flex-start; /* aligns text to the top of the image */
+      align-items: flex-start;
       flex-wrap: wrap;
     }
 
